Better whitespace check in CalendarService